@@ -647,7 +647,7 @@ static GSM_Error SMSDPgSQL_MoveSMS(GSM_MultiSMSMessage * sms UNUSED,
 
 /* Adds SMS to Outbox */
 static GSM_Error SMSDPgSQL_CreateOutboxSMS(GSM_MultiSMSMessage * sms,
-					   GSM_SMSDConfig * Config)
+					   GSM_SMSDConfig * Config, char *NewID)
 {
 	unsigned char buffer[10000], buffer2[400], buffer5[400];
 	int i, ID = 0;
@@ -818,6 +818,7 @@ static GSM_Error SMSDPgSQL_CreateOutboxSMS(GSM_MultiSMSMessage * sms,
 		}
 	}
 	SMSD_Log(0, Config, "Written message with ID %i", ID);
+	if (NewID != NULL) sprintf(NewID, "%d", ID);
 	return ERR_NONE;
 }
 
