@@ -24,6 +24,7 @@ ChangeLog
 [-] * Fix handling of caller group in Python bindings (bug #870).
 [-] * Correctly detect empty entries from Motorola.
 [-] * Better error reporting from at-charset test.
+[+] * smsd-inject now shows ID of injected message.
     
 20090415 - 1.24.0
 
